vbnc/vbnc/tests/Errors/32083.vb

Class A
    Sub New(ByVal i As Integer)

    End Sub
End Class

Class B
    Sub M(Of T As New)()
        M(Of A)()
    End Sub
End Class